tests/paczka1/small_fuzzy/66708271.err
Error in line 6: gccp A71 10,6
Error in line 7: IPOQgcdg7yl S799 53,6
Error in line 4: A71 S574 13,3
